--- a/src/app/counter/custom-counter-input/custom-counter-input.component.html
+++ b/src/app/counter/custom-counter-input/custom-counter-input.component.html
@@ -1,4 +1,9 @@
 <div>
+  <div class="my-3">{{ name$ | async }}</div>
   <input type="text" placeholder="Enter value" [(ngModel)]="value" />
   <button class="btn btn-primary" (click)="onAdd()">Add to counter</button>
+</div>
+
+<div>
+  <button (click)="onChangeName()">Change name</button>
 </div>
