--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -25,6 +25,15 @@
         <li class="nav-item">
           <a class="nav-link" [routerLink]="['/posts']">Posts</a>
         </li>
+        <li class="nav-item" *ngIf="!(isAuthenticated$ | async)">
+          <a class="nav-link" [routerLink]="['/auth/login']">Login</a>
+        </li>
+        <li class="nav-item" *ngIf="!(isAuthenticated$ | async)">
+          <a class="nav-link" [routerLink]="['/auth/signup']">Sign-up</a>
+        </li>
+        <li class="nav-item" *ngIf="isAuthenticated$ | async">
+          <a class="nav-link" [routerLink]="['/auth/logout']">Logout</a>
+        </li>
       </ul>
     </div>
   </div>
