--- a/src/app/posts/edit-post/edit-post.component.html
+++ b/src/app/posts/edit-post/edit-post.component.html
@@ -28,10 +28,10 @@
             !postForm.get('description')?.valid
           "
         >
-          <div *ngIf="postForm.get('description')?.errors?.['description']">
+          <div *ngIf="postForm.get('description')?.errors?.['required']">
             Description is required
           </div>
-          <div *ngIf="postForm.get('description')?.errors?.['description']">
+          <div *ngIf="postForm.get('description')?.errors?.['minlength']">
             Description should be minimum 10 letters
           </div>
         </div>
