--- a/src/app/posts/posts-list/posts-list.component.html
+++ b/src/app/posts/posts-list/posts-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8">
-    <h3>Posts List</h3>
+    <h3>Posts List ({{ count$ | async }})</h3>
     <div>
       <a [routerLink]="['/posts/add']" class="btn btn-primary">Add Posts</a>
     </div>
@@ -16,8 +16,8 @@
       <tbody>
         <tr *ngFor="let post of postsData">
           <td>{{ post.id }}</td>
-          <td>{{ post.title }}</td>
-          <td>{{ post.description }}</td>
+          <td style="word-wrap: break-all">{{ post.title }}</td>
+          <td style="word-wrap: break-all">{{ post.description }}</td>
           <td>
             <a [routerLink]="['edit', post.id]" class="btn btn-primary"
               >Update</a
