--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header>
 <app-loading-spinner *ngIf="showLoading$ | async"></app-loading-spinner>
 <div class="container">
   <div class="row">
@@ -6,6 +6,13 @@
       <div class="alert alert-danger" *ngIf="errorMessage | async as error">
         {{ error }}
       </div>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+</div> -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
       <router-outlet></router-outlet>
     </div>
   </div>
